# openbb-hka

./: .dockerignore  .gitignore  AUTHENTICATION_SUMMARY.md  CODEBUDDY.md  DOCS.md  Dockerfile  GEMINI.md  README.md  README.zh-CN.md  apps.json  devserver.sh  docker-compose.yml  env.example  idx-template.nix  main.py  minimal_requirements.txt  pyproject.toml  requirements.txt  test.ipynb
.idx/: dev.nix
core/: agent.py  auth.py  auth_models.py  auth_utils.py  config.py  database.py  db.py  db_models.py  landing.html  models.py  plotly_config.py  registry.py  schemas.py  security.py  session_manager.py  user_models.py  user_store.py  utils.py
docs/: auth.txt  idx-template.json  idx-template.nix
fin_data/: __init__.py  financials.py  profile.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/auth/: .env.example  README.md  index.html  manifest.webmanifest  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/auth/public/: manifest.json  sw.js
frontend/auth/src/: App.tsx  api.ts  index.css  main.tsx
frontend/miniapp/: package.json  pnpm-lock.yaml  project.config.json
frontend/miniapp/config/: index.ts
frontend/miniapp/src/: app.config.ts
frontend/obw-auth/: package.json  pnpm-lock.yaml  project.config.json  taro.config.ts  tsconfig.json
frontend/obw-auth/src/: app.config.ts  app.tsx  styles.css
frontend/plotly/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/components/: LoginForm.js  RegisterForm.js  TokenDisplay.js  WeChatLogin.js
frontend/src/contexts/: AuthContext.js
frontend/tables/: package-lock.json  package.json
frontend/web/: package-lock.json
mini-program/: README.md  app.js  app.json  sitemap.json
mini-program/pages/dashboard/: dashboard.js  dashboard.wxml  dashboard.wxss
models/: user.py
routes/: agents.py  auth.py  charts.py  chatglm.py  equity_cn.py  equity_hk.py  tradingview.py
templates/: agents.json  cn.json  hk.json
tests/: test_auth.py  test_main.py  test_registry.py  test_tradingview.py
(+42 files in other folders)
